# klennie

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  build.bat  build.sh  kprocview-git-0.1.0-1-x86_64.pkg.tar.zst  kprocview-git-debug-0.1.0-1-x86_64.pkg.tar.zst  utils.k
.claude/: settings.local.json
kprocview-git/: config  packed-refs
kprocview-git/objects/pack/: pack-c66146bcdfb1b1b7831f889091bcf9ad575fa766.idx  pack-c66146bcdfb1b1b7831f889091bcf9ad575fa766.pack  pack-c66146bcdfb1b1b7831f889091bcf9ad575fa766.rev
pkg/kprocview-git/: .BUILDINFO  .MTREE  .PKGINFO
pkg/kprocview-git-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/kprocview-git-debug/usr/src/debug/kprocview-git/kprocview-git/src/: process.hpp  system.cpp  system.hpp  ui.cpp
src/: main.cpp  process.cpp  system.cpp  system.hpp  ui.cpp  ui.hpp
